# umbratek-rs

./: .gitignore  Cargo.toml
examples/: broadcast.rs  get_registers.rs  motion_position.rs
examples/simple-tui/: Cargo.toml
examples/simple-tui/src/: app.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs
examples/simple_ui/: Cargo.toml
examples/simple_ui/src/: main.rs
src/: broadcast_registers.rs  bus.rs  checksum.rs  error.rs  lib.rs  protocol.rs
src/commands/: broadcast_read.rs  broadcast_write.rs  mod.rs  read.rs  write.rs
tests/: read.rs
tests/common/: mod.rs
