workspace = { members = ["examples/simple_ui"] }
[package]
name = "umbratek-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
env_logger = "0.11.3"
log = "0.4.8"
num-derive = "0.4.2"
num-traits = "0.2.18"
serial2 = "0.2.12"
zerocopy = { version = "0.7.32", features = ["zerocopy-derive", "derive"] }
